# Pet_Adoption_System

./: app.py  pet.py  pet_manager.py  pyproject.toml  readme.md
data/: pets.json
pet_adoption_system.egg-info/: PKG-INFO  SOURCES.txt
